--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .bgimg {
-    background-image: url("img/images.jpeg");
+    background-image: url("images.jpeg");
     background-size: 100% 100%;
     width: 100%;
     height: 100vh;
